--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -11,6 +11,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/nowFcstTitleTV"
                 android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
                 android:text="@string/nowFcst"
+                android:textStyle="bold"
                 android:textSize="@dimen/FcstTitle" />
 
             <LinearLayout
@@ -122,6 +124,7 @@
                 android:layout_below="@id/now_dot_line"
                 android:layout_marginLeft="14dp"
                 android:text="@string/timeFcst"
+                android:textStyle="bold"
                 android:textSize="@dimen/FcstRvTitle" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -144,7 +147,8 @@
                 android:layout_below="@id/time_dot_line"
                 android:layout_marginLeft="14dp"
                 android:text="@string/weekFcst"
-                android:textSize="@dimen/FcstRvTitle" />
+                android:textSize="@dimen/FcstRvTitle"
+                android:textStyle="bold"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/weekFcstRV"
