도로명 주소 관련 버그 수정 작업중

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:layout_above="@+id/weatherTab"/>
 
     <FrameLayout
-        android:id="@+id/naverMap"
+        android:id="@+id/naverMapFragmnet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible" />
