--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,18 +3,18 @@
     <dimen name="FcstTitle">28sp</dimen>
     <dimen name="NowTempTV">64sp</dimen>
     <dimen name="NowFcstTV">18sp</dimen>
-    <dimen name="NowWetRainWindLayout">13sp</dimen>
+    <dimen name="NowWetRainWindLayout">18sp</dimen>
     <dimen name="FcstRvTitle">24sp</dimen>
     <dimen name="WeekRVItmeText">18sp</dimen>
     <dimen name="WeekRVItemIV">30dp</dimen>
     <dimen name="WeekRVItemIVSmall">15dp</dimen>
-    <dimen name="TimeRVItemWidth">65sp</dimen>
-    <dimen name="TimeRVItemHeight">145sp</dimen>
-    <dimen name="TimeRVItemText">11sp</dimen>
-    <dimen name="TimeRVItemWindText">8sp</dimen>
+    <dimen name="TimeRVItemWidth">200dp</dimen>
+    <dimen name="TimeRVItemHeight">240dp</dimen>
+    <dimen name="TimeRVItemText">16sp</dimen>
+    <dimen name="TimeRVItemWindText">12sp</dimen>
     <dimen name="TimeRVItemMargin">4dp</dimen>
-    <dimen name="TimeRVItemIV">30dp</dimen>
-    <dimen name="TimeRVItemIVSmall">15dp</dimen>
+    <dimen name="TimeRVItemIV">45dp</dimen>
+    <dimen name="TimeRVItemIVSmall">20dp</dimen>
     <dimen name="WeekRVMarginIV">2dp</dimen>
     <dimen name="WeekRVMarginTV">3dp</dimen>
 </resources>
