--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -1,173 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backGround">
+    android:layout_margin="@dimen/NowFcstMargin"
+    android:background="@color/backGround"
+    android:orientation="vertical"
+    android:weightSum="8">
 
-    <ScrollView
+    <TextView
+        android:id="@+id/nowFcstTitleTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/nowFcst"
+        android:textSize="@dimen/FcstTitle"
+        android:textStyle="bold" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/NowFcstMarginStart"
+        android:layout_marginEnd="@dimen/NowFcstMarginEnd"
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:weightSum="7">
 
         <LinearLayout
+            android:id="@+id/nowFcstLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="3dp"
-            android:weightSum="8">
+            android:layout_height="0dp"
+            android:layout_weight="4"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:weightSum="5">
 
-            <TextView
-                android:id="@+id/nowFcstTitleTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/nowFcst"
-                android:textSize="@dimen/FcstTitle"
-                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:orientation="vertical"
-                android:weightSum="3">
-
-                <LinearLayout
-                    android:id="@+id/nowFcstLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:orientation="horizontal"
-                    android:layout_weight="2"
-                    android:weightSum="2">
-
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:id="@+id/nowFcstIV"
-                            android:layout_width="130dp"
-                            android:layout_height="130dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/nowTempTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:textSize="@dimen/NowTempTV" />
-
-                        <TextView
-                            android:id="@+id/nowFcstTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:textSize="@dimen/NowFcstTV" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/nowWetRainWindLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:weightSum="3">
-
-                    <TextView
-                        android:id="@+id/nowWetTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_gravity="left"
-                        android:layout_margin="3dp"
-                        android:layout_weight="1"
-                        android:textSize="@dimen/NowWetRainWindLayout" />
-
-                    <TextView
-                        android:id="@+id/nowRainTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_gravity="left"
-                        android:layout_margin="3dp"
-                        android:layout_weight="1"
-                        android:textSize="@dimen/NowWetRainWindLayout" />
-
-                    <TextView
-                        android:id="@+id/nowWindTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_gravity="left"
-                        android:layout_margin="3dp"
-                        android:layout_weight="1"
-                        android:textSize="@dimen/NowWetRainWindLayout" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/now_dot_line"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/nowWetRainWindLayout"
-                    android:src="@drawable/dotted_line_long" />
-
-                <TextView
-                    android:id="@+id/timeFcstTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="14dp"
-                    android:text="@string/timeFcst"
-                    android:textSize="@dimen/FcstRvTitle"
-                    android:textStyle="bold" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/timeFcstRV"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@id/timeFcstTV" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:orientation="vertical">
+                android:gravity="center">
 
                 <ImageView
-                    android:id="@+id/time_dot_line"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/dotted_line_long" />
+                    android:id="@+id/nowFcstIV"
+                    android:layout_width="@dimen/NowFcstIV"
+                    android:layout_height="@dimen/NowFcstIV"
+                    android:contentDescription="@string/imageLoadFail" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/weekFcstTV"
+                    android:id="@+id/nowTempTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="14dp"
-                    android:text="@string/weekFcst"
-                    android:textSize="@dimen/FcstRvTitle"
-                    android:textStyle="bold" />
+                    android:layout_gravity="center"
+                    android:textSize="@dimen/NowTempTV" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/weekFcstRV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/nowFcstTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textSize="@dimen/NowFcstTV" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/nowWetRainWindLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:weightSum="3">
+
+            <TextView
+                android:id="@+id/nowWetTV"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="start"
+                android:layout_margin="@dimen/NowFcstMargin"
+                android:layout_weight="1"
+                android:textSize="@dimen/NowWetRainWindLayout" />
+
+            <TextView
+                android:id="@+id/nowRainTV"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="start"
+                android:layout_margin="@dimen/NowFcstMargin"
+                android:layout_weight="1"
+                android:textSize="@dimen/NowWetRainWindLayout" />
+
+            <TextView
+                android:id="@+id/nowWindTV"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="start"
+                android:layout_margin="@dimen/NowFcstMargin"
+                android:layout_weight="1"
+                android:textSize="@dimen/NowWetRainWindLayout" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/now_dot_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/imageLoadFail"
+            android:src="@drawable/dotted_line_long" />
+
+        <TextView
+            android:id="@+id/timeFcstTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/NowFcstMarginStart"
+            android:text="@string/timeFcst"
+            android:textSize="@dimen/FcstRvTitle"
+            android:textStyle="bold" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/timeFcstVP2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/time_dot_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/imageLoadFail"
+            android:src="@drawable/dotted_line_long" />
+
+        <TextView
+            android:id="@+id/weekFcstTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/NowFcstMarginStart"
+            android:text="@string/weekFcst"
+            android:textSize="@dimen/FcstRvTitle"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/weekFcstRV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/NowFcstMarginStart"
+            android:layout_marginEnd="@dimen/NowFcstMarginEnd" />
+    </LinearLayout>
+</LinearLayout>
