--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,19 +2,28 @@
 <resources>
     <dimen name="FcstTitle">28sp</dimen>
     <dimen name="NowTempTV">64sp</dimen>
-    <dimen name="NowFcstTV">18sp</dimen>
+    <dimen name="NowFcstTV">30sp</dimen>
+    <dimen name="NowFcstIV">110dp</dimen>
+    <dimen name="NowFcstMarginStart">14dp</dimen>
+    <dimen name="NowFcstMarginEnd">10dp</dimen>
+    <dimen name="NowFcstMargin">3dp</dimen>
     <dimen name="NowWetRainWindLayout">18sp</dimen>
     <dimen name="FcstRvTitle">24sp</dimen>
     <dimen name="WeekRVItmeText">18sp</dimen>
     <dimen name="WeekRVItemIV">30dp</dimen>
     <dimen name="WeekRVItemIVSmall">15dp</dimen>
-    <dimen name="TimeRVItemWidth">200dp</dimen>
-    <dimen name="TimeRVItemHeight">240dp</dimen>
-    <dimen name="TimeRVItemText">16sp</dimen>
-    <dimen name="TimeRVItemWindText">12sp</dimen>
-    <dimen name="TimeRVItemMargin">4dp</dimen>
-    <dimen name="TimeRVItemIV">45dp</dimen>
-    <dimen name="TimeRVItemIVSmall">20dp</dimen>
+    <dimen name="TimeItemTextDateTime">20sp</dimen>
+    <dimen name="TimeItemText">18sp</dimen>
+    <dimen name="TimeItemWindText">14sp</dimen>
+    <dimen name="TimeItemFcstargin">25dp</dimen>
+    <dimen name="TimeItemMargin">4dp</dimen>
+    <dimen name="TimeItemIV">50dp</dimen>
+    <dimen name="TimeItemIVSmall">28dp</dimen>
+    <dimen name="TimeItemCornerRadius">12dp</dimen>
+    <dimen name="TimeItemElevation">3dp</dimen>
+    <dimen name="TimeItemcontentPadding">4dp</dimen>
     <dimen name="WeekRVMarginIV">2dp</dimen>
     <dimen name="WeekRVMarginTV">3dp</dimen>
+    <dimen name="OffsetBetweenPages">80dp</dimen>
+    <dimen name="CardViewMargin">90dp</dimen>
 </resources>
